<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.artist.ArtistActivity">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_artist"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/img_bruno_mars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/tv_monthly_audience"
                android:theme="@style/TextAppearance.Spotify.Body.Medium_kr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_monthly_audience"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_artist"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                />

            <TextView
                android:id="@+id/tv_monthly_audience_amount"
                android:theme="@style/TextAppearance.Spotify.Body.Medium_kr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1111.1만명"
                app:layout_constraintTop_toTopOf="@id/tv_monthly_audience"
                app:layout_constraintStart_toEndOf="@id/tv_monthly_audience"
                android:layout_marginStart="5dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_artist_small"
                android:layout_width="31dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="4dp"
                android:background="@color/gray30"
                app:layout_constraintTop_toBottomOf="@id/tv_monthly_audience"
                app:layout_constraintStart_toStartOf="parent">
                <ImageView
                    android:id="@+id/iv_artist_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_bruno_mars_artist"
                    android:layout_margin="2dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/btn_artist_follow"
                android:theme="@style/TextAppearance.Spotify.Body.Regular.kr_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_follow"
                app:layout_constraintStart_toEndOf="@id/cv_artist_small"
                app:layout_constraintTop_toTopOf="@id/cv_artist_small"
                app:layout_constraintBottom_toBottomOf="@id/cv_artist_small"
                android:background="@drawable/rounded_gray30_radius_15"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8.5dp"
                android:layout_marginStart="22dp"
                />

            <ImageView
                android:id="@+id/btn_ellipsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ellipsis_gray_44"
                app:layout_constraintTop_toTopOf="@id/cv_artist_small"
                app:layout_constraintBottom_toBottomOf="@id/cv_artist_small"
                app:layout_constraintStart_toEndOf="@id/btn_artist_follow"
                android:layout_marginStart="8dp"
                />

            <ImageView
                android:id="@+id/btn_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_shuffle_44"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/btn_play"
                app:layout_constraintTop_toTopOf="@id/cv_artist_small"
                app:layout_constraintBottom_toBottomOf="@id/cv_artist_small"/>

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_play_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cv_artist_small"
                app:layout_constraintBottom_toBottomOf="@id/cv_artist_small"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tv_music"
                android:theme="@style/TextAppearance.Spotify.Body.Regular_kr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_music"
                app:layout_constraintTop_toBottomOf="@id/cv_artist_small"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="19.5dp"
                android:layout_marginTop="17dp"/>

            <TextView
                android:id="@+id/tv_event"
                android:theme="@style/TextAppearance.Spotify.Body.Regular_kr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_event"
                app:layout_constraintTop_toTopOf="@id/tv_music"
                app:layout_constraintBottom_toBottomOf="@id/tv_music"
                app:layout_constraintStart_toEndOf="@id/tv_music"
                android:layout_marginStart="28dp"
                />

            <TextView
                android:id="@+id/tv_merch"
                android:theme="@style/TextAppearance.Spotify.Body.Regular_kr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_music"
                app:layout_constraintBottom_toBottomOf="@id/tv_music"
                app:layout_constraintStart_toEndOf="@id/tv_event"
                android:text="@string/artist_merch"
                android:layout_marginStart="22dp"/>

            <View
                android:id="@+id/view_artist"
                android:layout_width="29dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/tv_music"
                android:background="@color/green"
                app:layout_constraintStart_toStartOf="@id/tv_music"
                app:layout_constraintEnd_toEndOf="@id/tv_music"
                android:layout_marginTop="7dp"
                />

            <TextView
                android:id="@+id/tv_popular"
                android:theme="@style/TextAppearance.Spotify.Header.h2_en_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_popular"
                app:layout_constraintTop_toBottomOf="@id/view_artist"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next_33"
                app:layout_constraintStart_toEndOf="@id/tv_popular"
                app:layout_constraintTop_toTopOf="@id/tv_popular"
                app:layout_constraintBottom_toBottomOf="@id/tv_popular"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_popular_music" />

            <TextView
                android:id="@+id/tv_recommend_artist"
                android:theme="@style/TextAppearance.Spotify.Header.h2_en_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_artist"
                app:layout_constraintTop_toBottomOf="@id/rv_popular_music"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:includeFontPadding="false"
                />

            <ImageView
                android:id="@+id/iv_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/img_album_bruno_mars"
                app:layout_constraintTop_toBottomOf="@id/tv_recommend_artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:layout_marginHorizontal="16dp"
                />

            <TextView
                android:id="@+id/tv_popular_music"
                android:theme="@style/TextAppearance.Spotify.Header.h2_en_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_popular"
                app:layout_constraintTop_toBottomOf="@id/iv_album"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="14dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popular_music"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/item_popular_album"
                />

            <TextView
                android:id="@+id/btn_see_discography"
                android:theme="@style/TextAppearance.Spotify.Body.Regular_kr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_discography"
                android:background="@drawable/rounded_gray30_radius_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_popular_album"
                android:layout_marginTop="5dp"
                android:paddingVertical="5.5dp"
                android:paddingHorizontal="17dp"
                />

            <TextView
                android:id="@+id/tv_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Bruno Mars 장르"
                app:layout_constraintTop_toBottomOf="@id/btn_see_discography"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="14dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_artist_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_genre_title"
                app:layout_constraintEnd_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_artist_genre"
                />

            <TextView
                android:id="@+id/tv_detail_description"
                android:theme="@style/TextAppearance.Spotify.Header.h2_en_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_artist_genre"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/detail_description"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                />

            <ImageView
                android:id="@+id/iv_artist_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/img_artist_card"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>